--- a/q/273990.html
+++ b/q/273990.html
@@ -26,25 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="0"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
 <tr d-ix="1"><td>063</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
 <tr d-ix="2"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 9 bytes</h1>
-<pre><code>tY*gttY*=
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
+<pre><code>tY*zUGn=
 </code></pre>
-<p>Inputs a matrix. Outputs a <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy/falsy</a> result (code footer includes test for truthiness/falsihood).</p>
-<p><a href="https://tio.run/##y00syfn/vyRSK70ESNj@t1cvKSotyahU56pVT0vMKa5U/x@tYKgAQ9YgStcQQlpDhXXhHF2YZCwA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L8kUiu9BEjY/rdXLykqLcmoVOeqVU9LzCkGMmJdQv5HKxgqwJA1iNI1hJDWUGFdOEcXJhnLFQ1VDxYBclG0wZgQExVwyYH1xQIA" rel="nofollow noreferrer">verify all test cases</a></p>
+<p>Inputs a matrix. Gives <code>1</code> or <code>0</code> for Hadamard or non-Hadamard, respectively.</p>
+<p><a href="https://tio.run/##y00syfn/vyRSqyrUPc/2//9oBUMFGLIGUbqGENIaKqwL5@jCJGMB" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L8kUqsq1D3P9r9LVEXI/2gFQwUYsgZRuoYQ0hoqrAvn6MIkY7mioerBIkAuijYYE2KiAi45sL5YAA" rel="nofollow noreferrer">verify all test cases</a></p>
 <h3>How it works</h3>
-<pre><code>t    % Implicit input: matrix M
-tY*  % Duplicate. Matrix product with itself. This should give a scalar matrix
-     % if M is Hadamard
-g    % Convert to logical: sets non-zero entries to 1. This matrix, X, should be
-     % an identity matrix if M is Hadamard
-t    % Duplicate
-tY*  % Duplicate. Matrix product with itself. This should give the same matrix X
-     % if X is an identity matrix
-=    % Equal? Element-wise. Implicit display
+<pre><code>     % Implicit input: matrix M, of size n
+tY*  % Duplicate. Matrix product with itself. Give scalar matrix iff M is Hadamard
+z    % Number of non-zeros. Gives n iff M is Hadamard
+U    % Square 
+G    % Push input again
+n    % Number of entries. This gives n^2
+=    % Equal?
+     % Implicit display
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 63 bytes</h1>
