--- a/q/273990.html
+++ b/q/273990.html
@@ -26,34 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
-<tr d-ix="1"><td>063</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
-<tr d-ix="2"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
+<tr d-ix="0"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
+<tr d-ix="1"><td>062</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="2"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="3"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
+<pre><code>2ḋṠ₌@ȧṠ⁼
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIy4biL4bmg4oKMQMin4bmg4oG8IiwiIiwiW1sxICwxLCAxLCAxXSxbMSwgLTEsICAxLCAtMSxdLFsxLCAxLCAtMSwgLTFdLFsxLC0xLC0xLCAxXV0iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<pre><code>       ⁼ # Do all
+2ḋ       # pairs
+  Ṡ      # summed
+    @    # have length
+       ⁼ # equal to
+   ₌ ȧṠ  # Sum of absolute values?
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 62 bytes</h1>
+<p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((p,i)=&gt;m.some(q=&gt;i--*p.reduce((t,v,x)=&gt;t+v*q[x],0)))
+</code></pre>
+<p><a href="https://tio.run/##jY5BDoMgFET3nIIlWD5pD4AXISwMYkMjgkqJt6c20Wqb1nTxF3/eTGZuVapGPdgQofO1yY3ITpSOj94ZQgKz9PX1orQAReCDqe96ppElNs08nlLRy0mxM6U0a9@NvjW89VfSEIkwlvjC8HZYsVWERYS9uAL4dMISR4pS9LPmLXRkPmDft8Fu3Nbzn/dZlR8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
 <pre><code>tY*zUGn=
 </code></pre>
 <p>Inputs a matrix. Gives <code>1</code> or <code>0</code> for Hadamard or non-Hadamard, respectively.</p>
-<p><a href="https://tio.run/##y00syfn/vyRSqyrUPc/2//9oBUMFGLIGUbqGENIaKqwL5@jCJGMB" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L8kUqsq1D3P9r9LVEXI/2gFQwUYsgZRuoYQ0hoqrAvn6MIkY7mioerBIkAuijYYE2KiAi45sL5YAA" rel="nofollow noreferrer">verify all test cases</a></p>
+<p><a href="https://tio.run/##y00syfn/vyRSqyrUPc/2//9oBUMFGLIGUbqGENIaKqwL5@jCJGMB" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L8kUqsq1D3P9r9LVEXI/2gFQwUYsgZRuoYQ0hoqrAvn6MIkY7mioerBIhAukj4YE2IkTjmoxlgA" rel="nofollow noreferrer">verify all test cases</a></p>
 <h3>How it works</h3>
-<pre><code>     % Implicit input: matrix M, of size n
-tY*  % Duplicate. Matrix product with itself. Give scalar matrix iff M is Hadamard
-z    % Number of non-zeros. Gives n iff M is Hadamard
+<pre><code>t    % Implicit input: matrix M, of size n, with 1 or −1 values. Duplicate
+Y*   % Matrix product, M*M. This is a scalar matrix if and only if M is Hadamard
+z    % Number of non-zeros. Gives n if and only if M is Hadamard
 U    % Square 
 G    % Push input again
-n    % Number of entries. This gives n^2
-=    % Equal?
-     % Implicit display
+n    % Number of entries. Gives n^2
+=    % Equal? Implicit display
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 63 bytes</h1>
-<p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((p,i)=&gt;m.some(q=&gt;i--&amp;&amp;p.reduce((t,v,x)=&gt;t+v*q[x],0)))
-</code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/X1i5Xrzg/N1VDo0AnUxPOK7S1y9TVVVMr0CtKTSlNBkqX6JTpVAAVlGiXaRVGV8TqGGhqav5Pzs8rzs9J1cvJT9dI04jmUlCIVjDUUUBghVgdmKAuVFAXWRAmoYuuUheqnStWU5MLpzUomvApxiOH3W26SI5D2EOcWpBV/wE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>⊙θ⊙θ∧⁻κμΣ×ιλ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjetAooy80o0HPMqNQp1FOBUioZvZl5psUa2jkKupo5CcGmuRkhmbmqxRqaOQo4mGFgvKU5KLoaaszxaSbcsRyn2pkN0dLShjgIUxepwKSgA-bpgvi6cD-Yg8XWhSmJjYyHmAQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if not Hadamard, nothing if Hadamard, Explanation:</p>
