--- a/q/273990.html
+++ b/q/273990.html
@@ -26,19 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
-<tr d-ix="1"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
-<tr d-ix="2"><td>062</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
-<tr d-ix="3"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
-<tr d-ix="4"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
+<tr d-ix="0"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
+<tr d-ix="1"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
+<tr d-ix="2"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
+<tr d-ix="3"><td>062</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="4"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="5"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
+<pre><code>Sđ∙Z
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FsuDj0x81DEzaklxUnIxVGzBzbboaMPYWC4gqWMYqwMkdWFcXRBfFyQMldZBKNGBSkMYMLYuRAquXwfJEIiMDg7xWIhzAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>This swaps truthy and falsy values. It outputs <code>False</code> if the input is a Hadamard matrix, and <code>True</code> otherwise.</p>
+<pre><code>Sđ∙Z
+S       Find a subset of the input
+ đ      whose length is 2
+  ∙     and the dot product of the two elements
+   Z    is nonzero
+</code></pre>
+<p><code>-e</code> checks if there is a solution.</p>
+<hr />
+<h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
+<pre><code>ᵒ∙jZ‼*
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6Fmsebp30qGNmVtSjhj1aS4qTkouhEgtutkVHG8bGcgFJHcNYHSCpC-Pqgvi6IGGotA5CiQ5UGsKAsXUhUnD9OkiGQGR0cIjHQpwDAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>ᵒ∙jZ‼*
+ᵒ∙      Outer product with dot product
+        This is equivalent to multiplying the matrix by its transpose
+  j     Join the matrix into a single list
+   Z‼   Remove zeros
+     *  Check if it has the same length as the input
+        Nekomata does not allow multiplying two lists of different lengths
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
 <pre><code>a-&gt;a*a~==#a
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWqxN17RK1EutsbZUTISI3pycWFORUaiQq6NopFBRl5pUAmUogjpJCmkaipqaOQrRvYomGIYhhqGNobaijaxgLZusaWusCRSAcMARL6oBlIBSEpQsRhunSgWsFc6yxiMXGakKct2ABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Let <span class="math-container">\$A\$</span> be the input matrix. Since it is guaranteed to contain only <code>1</code> and <code>-1</code>, we only need to check if <span class="math-container">\$A A^T = n I\$</span>, where <span class="math-container">\$n\$</span> is the number of rows in <span class="math-container">\$A\$</span>. When comparing a matrix with a scalar, PARI/GP will automatically multiply the scalar by the identity matrix of the same size.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
 <pre><code>2ḋṠ₌@ȧṠ⁼
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIy4biL4bmg4oKMQMin4bmg4oG8IiwiIiwiW1sxICwxLCAxLCAxXSxbMSwgLTEsICAxLCAtMSxdLFsxLCAxLCAtMSwgLTFdLFsxLC0xLC0xLCAxXV0iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -50,14 +77,14 @@
    ₌ ȧṠ  # Sum of absolute values?
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 62 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 62 bytes</h1>
 <p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((p,i)=&gt;m.some(q=&gt;i--*p.reduce((t,v,x)=&gt;t+v*q[x],0)))
 </code></pre>
 <p><a href="https://tio.run/##jY5BDoMgFET3nIIlWD5pD4AXISwMYkMjgkqJt6c20Wqb1nTxF3/eTGZuVapGPdgQofO1yY3ITpSOj94ZQgKz9PX1orQAReCDqe96ppElNs08nlLRy0mxM6U0a9@NvjW89VfSEIkwlvjC8HZYsVWERYS9uAL4dMISR4pS9LPmLXRkPmDft8Fu3Nbzn/dZlR8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
 <pre><code>tY*zUGn=
 </code></pre>
 <p>Inputs a matrix. Gives <code>1</code> or <code>0</code> for Hadamard or non-Hadamard, respectively.</p>
@@ -72,7 +99,7 @@ n    % Number of entries. Gives n^2
 =    % Equal? Implicit display
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>⊙θ⊙θ∧⁻κμΣ×ιλ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjetAooy80o0HPMqNQp1FOBUioZvZl5psUa2jkKupo5CcGmuRkhmbmqxRqaOQo4mGFgvKU5KLoaaszxaSbcsRyn2pkN0dLShjgIUxepwKSgA-bpgvi6cD-Yg8XWhSmJjYyHmAQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if not Hadamard, nothing if Hadamard, Explanation:</p>
