--- a/q/273996.html
+++ b/q/273996.html
@@ -26,17 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>026</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
+<tr d-ix="0"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, 26 bytes</h1>
-<pre><code>/[1ACFHLRSacdfgik-tx]/Q
-Q1
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
+<p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
+<pre><code>/[1ACFHLRSacdfgik-tx]/Q1
 </code></pre>
-<p><a href="https://tio.run/##K05N0U3PK/3/Xz/a0NHZzcMnKDgxOSUtPTNbt6QiVj@QK9Dw//9iAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
-<p>guess I can start it off with the obvious solution. I alphabetized the options so that I could abbreviate any ranges; but <code>k-t</code> was the only one. in sed, <code>Q</code> means 'immediately quit', and it takes an optional number as an error code; so if input was a good char then it'll quit normally, and if it wasn't it'll give an error code of 1.</p>
+<p><a href="https://tio.run/##K05N0U3PK/3/Xz/a0NHZzcMnKDgxOSUtPTNbt6QiVj/Q8P//RAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p>guess I can start it off with the obvious solution. I alphabetized the options so that I could abbreviate any ranges; but <code>k-t</code> was the only one. in sed, <code>Q</code> means 'immediately quit', and it takes an optional number as an error code; so if input was a good char then it'll quit with an error code of 1, otherwise it'll exit normally with your input in stdout.</p>
 <p>if you need it to check if the entire string is a valid option, it'd look like</p>
-<pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q
-Q1
+<pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q1
 </code></pre>
 </div>
 
