--- a/q/273990.html
+++ b/q/273990.html
@@ -26,14 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
-<tr d-ix="1"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
-<tr d-ix="2"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
-<tr d-ix="3"><td>062</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
-<tr d-ix="4"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
-<tr d-ix="5"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
+<tr d-ix="0"><td>036</td><td>R</td><td>240708T054306Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274000#274000">pajonk</a></td></tr>
+<tr d-ix="1"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
+<tr d-ix="2"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
+<tr d-ix="3"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
+<tr d-ix="4"><td>062</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="5"><td>008</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="6"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 36 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(H)any(H%*%t(H)-diag(n&lt;-nrow(H))*n)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3VWI0PDQT8yo1PFS1VEuAbN2UzMR0jTwb3byi_HIgX1MrTxOq9muaRkFRZl6JRomGoaamJheMW5SUmZeikaxhqGOoqQOidEHS2OR1CSlQgCKQMhBDF8LXhQtAxXRRVIBV4TIR1QhdhBk4LEFRAQQQzy9YAKEB" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Uses the characterization: <span class="math-container">\$HH^T=nI_n\$</span>.</p>
+<p>Outputs swapped <code>TRUE</code>/<code>FALSE</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
 <pre><code>Sđ∙Z
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FsuDj0x81DEzaklxUnIxVGzBzbboaMPYWC4gqWMYqwMkdWFcXRBfFyQMldZBKNGBSkMYMLYuRAquXwfJEIiMDg7xWIhzAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -59,13 +67,13 @@ S       Find a subset of the input
         Nekomata does not allow multiplying two lists of different lengths
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
 <pre><code>a-&gt;a*a~==#a
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWqxN17RK1EutsbZUTISI3pycWFORUaiQq6NopFBRl5pUAmUogjpJCmkaipqaOQrRvYomGIYhhqGNobaijaxgLZusaWusCRSAcMARL6oBlIBSEpQsRhunSgWsFc6yxiMXGakKct2ABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Let <span class="math-container">\$A\$</span> be the input matrix. Since it is guaranteed to contain only <code>1</code> and <code>-1</code>, we only need to check if <span class="math-container">\$A A^T = n I\$</span>, where <span class="math-container">\$n\$</span> is the number of rows in <span class="math-container">\$A\$</span>. When comparing a matrix with a scalar, PARI/GP will automatically multiply the scalar by the identity matrix of the same size.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
 <pre><code>2ḋṠ₌@ȧṠ⁼
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIy4biL4bmg4oKMQMin4bmg4oG8IiwiIiwiW1sxICwxLCAxLCAxXSxbMSwgLTEsICAxLCAtMSxdLFsxLCAxLCAtMSwgLTFdLFsxLC0xLC0xLCAxXV0iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -77,14 +85,14 @@ S       Find a subset of the input
    ₌ ȧṠ  # Sum of absolute values?
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 62 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 62 bytes</h1>
 <p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((p,i)=&gt;m.some(q=&gt;i--*p.reduce((t,v,x)=&gt;t+v*q[x],0)))
 </code></pre>
 <p><a href="https://tio.run/##jY5BDoMgFET3nIIlWD5pD4AXISwMYkMjgkqJt6c20Wqb1nTxF3/eTGZuVapGPdgQofO1yY3ITpSOj94ZQgKz9PX1orQAReCDqe96ppElNs08nlLRy0mxM6U0a9@NvjW89VfSEIkwlvjC8HZYsVWERYS9uAL4dMISR4pS9LPmLXRkPmDft8Fu3Nbzn/dZlR8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 8 bytes</h1>
 <pre><code>tY*zUGn=
 </code></pre>
 <p>Inputs a matrix. Gives <code>1</code> or <code>0</code> for Hadamard or non-Hadamard, respectively.</p>
@@ -99,7 +107,7 @@ n    % Number of entries. Gives n^2
 =    % Equal? Implicit display
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>⊙θ⊙θ∧⁻κμΣ×ιλ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjetAooy80o0HPMqNQp1FOBUioZvZl5psUa2jkKupo5CcGmuRkhmbmqxRqaOQo4mGFgvKU5KLoaaszxaSbcsRyn2pkN0dLShjgIUxepwKSgA-bpgvi6cD-Yg8XWhSmJjYyHmAQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if not Hadamard, nothing if Hadamard, Explanation:</p>
