--- a/q/273996.html
+++ b/q/273996.html
@@ -26,25 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
-<tr d-ix="1"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
+<tr d-ix="0"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
+<tr d-ix="1"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
+<p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
+<pre><code>/[1ACFHLRSacdfgik-tx]/Q1
+</code></pre>
+<p><a href="https://tio.run/##K05N0U3PK/3/Xz/a0NHZzcMnKDgxOSUtPTNbt6QiVj/Q8P//RAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p>guess I can start it off with the obvious solution. I <a href="https://tio.run/##K05N0U3PK/3/v1g/pkY/Jk8/natYX09L38c53tHHx9ZZoTi/qMTGxkZdTV0/FSgFVKGf/v9/ZnZhUXF6Tl6@Y6JzboWhW4GHT1BKcFpJMgA" rel="nofollow noreferrer">alphabetized</a> the options so that I could abbreviate any ranges; but <code>k-t</code> was the only one. in sed, <code>Q</code> means 'immediately quit', and it takes an optional number as an error code; so if input was a good char then it'll quit with an error code of 1, otherwise it'll exit normally with your input in stdout.</p>
+<p>if you need it to check if the entire string is a valid option, it'd look like</p>
+<pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q1
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(o)grep(&quot;[1ACFHLRSacdfgik-tx]&quot;,o)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3lWI08jXTi1ILNJSiDR2d3Tx8goITk1PS0jOzdUsqYpV08jWhKqvTNJQMlDS5gJQhkEpOLNFQisnThYGYPKCgb2KBRppOao5GcUlRcUFOJlCJgaGRsYmpmbmFpaOTs4urm7uHp5e3j6-ff0BgUHBIaFh4RGRUYlJySmpaekZmVnZObl5-QWFRcUlpWXlFZZWSjpKSpibUCQsWQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Basically a port of <a href="https://codegolf.stackexchange.com/a/273998/55372">@guest4308's sed answer</a>.</p>
 <p>Uses <code>1</code> as truthy and <code>integer(0)</code> as falsy.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
-<p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
-<pre><code>/[1ACFHLRSacdfgik-tx]/Q1
-</code></pre>
-<p><a href="https://tio.run/##K05N0U3PK/3/Xz/a0NHZzcMnKDgxOSUtPTNbt6QiVj/Q8P//RAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
-<p>guess I can start it off with the obvious solution. I alphabetized the options so that I could abbreviate any ranges; but <code>k-t</code> was the only one. in sed, <code>Q</code> means 'immediately quit', and it takes an optional number as an error code; so if input was a good char then it'll quit with an error code of 1, otherwise it'll exit normally with your input in stdout.</p>
-<p>if you need it to check if the entire string is a valid option, it'd look like</p>
-<pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q1
-</code></pre>
 </div>
 
 <table id="st">
