--- a/q/273996.html
+++ b/q/273996.html
@@ -26,10 +26,68 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
-<tr d-ix="1"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
+<tr d-ix="0"><td>163</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="1"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
+<tr d-ix="2"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.esolangs.org/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
+<pre><code>}*__|*__^__________!!!___!{!___!!!!__!{!__{!{!*!!{!!!{!___________________________{{{{{{{{{___!!!{!!____________________________________!!!!{{!!!_{!!_____{!{{{!{{!
+</code></pre>
+<p>Assumes ASCII input. Reaches to <code>{</code> to output a byte if truthy, no output if falsey.</p>
+<p><a href="https://tpaefawzen.github.io/dis.web/#source=%7D*__%7C*__%5E__________%21%21%21___%21%7B%21___%21%21%21%21__%21%7B%21__%7B%21%7B%21*%21%21%7B%21%21%21%7B%21___________________________%7B%7B%7B%7B%7B%7B%7B%7B%7B___%21%21%21%7B%21%21____________________________________%21%21%21%21%7B%7B%21%21%21_%7B%21%21_____%7B%21%7B%7B%7B%21%7B%7B%21&amp;input_enc=utf-8&amp;input=1&amp;output_enc=base16" rel="nofollow noreferrer">Try on dis.web!</a></p>
+<h2>How it works</h2>
+<p>Get a character:</p>
+<pre><code> }
+</code></pre>
+<p>Subtract 33 (<code>!</code>) from the character's code at memory 45:</p>
+<pre><code>*__|
+</code></pre>
+<p>Goto what memory 45 says:</p>
+<pre><code>*__^
+</code></pre>
+<p>It should go to one of 19 thru 162:</p>
+<pre><code>!!!___!{!___!!!!__!{!__{!{!*!!{!!!{!___________________________{{{{{{{{{___!!!{!!____________________________________!!!!{{!!!_{!!_____{!{{{!{{!
+</code></pre>
+<p>Obtw Memory 43-49, which is accessed by memory 1-8:</p>
+<pre><code>!{!*!!{
+</code></pre>
+<h2>How I generated code above</h2>
+<h3><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 871 bytes</h3>
+
+<pre class="lang-javascript prettyprint-override"><code>disMath = {
+    get subtract(){
+        BASE=3;
+        function _op_by_digit(x, y) {
+            return ( x - y + BASE ) % BASE;
+        }
+
+      return function _subtract(x, y) {
+        if ( x &lt; 1 &amp;&amp; y &lt; 1 ) return 0;
+        return _op_by_digit(x%BASE, y%BASE) + BASE*_subtract(Math.floor(x/BASE), Math.floor(y/BASE));
+      }
+    }
+};
+input = &quot;0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&quot;;
+truthy = &quot;1ACFHLRSacdfgiklmnopqrstx&quot;;
+hello = [input, truthy].map(str=&gt;[...str].map(char=&gt;char.codePointAt(0)).map(x=&gt;disMath.subtract(x,33)+1).sort((x,y)=&gt;x&gt;y||(x==y)-1))
+init = &quot;}*__|*__^&quot;;
+program = init;
+for ( i = 9; i &lt;= 162; i++ ) {
+    if ( i == 46 ) program += &quot;*&quot;;
+    else if ( hello[1].includes(i) ) program += &quot;{&quot;;
+    else if ( hello[0].includes(i) ) program += &quot;!&quot;;
+    else program += &quot;_&quot;;
+}
+console.log(program);
+console.log(program.length);
+</code></pre>
+<p><a href="https://tio.run/##fVJtT9swEP6eX3GrBIqb1mso64ZCKpW3wQYbo3uvWJTm1SyNg@OwZLS/vbskLSlomyXb5@fuee589o19Z6eOYInsxtz1lkuXpRe2DMGEewVwBJ6ENJtKYTtSJTVWjoPR@NjsGw9nP4sdyXgMFk@saWG5LGBSzTtQEGhY5RCezEQMKuTQhQK0SgoIbFVGo7hQlEeEJsNDPU/lmV/J7oMO29uoXRpkze810ivkcalbZXoUrHayqqvdJCvbQv2Ic6Hmz6uYDmxgRY2RdZaFUq8LQ2FxkknsaKun7/R3XwxevtobHRweHZ@8Pj178/b84t37yw9X44@fPn/5@u27PXVczw9CdvMzmsU8uRWpzO5@5cXvlqFIkcmwKKX00eHJ6fnV2HZcP2BNaI5RoRdFHIMmVeIO1KxrOrMTNZXCHE4opWjUiBPaCJUrdfALXHIWy5FUe4RU7twcrv4E3eh7v080ndCUC6nisSDmMB8W8zmGmwXp6oTgrVl16UXbsuY4f2BlieCBsGcIl15D8bnAF2N43jNw2zdBH@ygpWmwftfqTTHChN0BgmsFDZXbrbrZXpR6dVx184l@TVnsRJnrpSojT0j3/yD1/kd6tknadFjoWCgOj1MeeTTigbry4j/4C0ojLw5kSIzl8g8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h2>More explains</h2>
+<p>I first tried what operation to do could reduce code space.</p>
+<p>For each possible inputs and truthy cases (let them x), I tried x subtracted by command character on Dis (which is one of 33, 42, 62, 94, 95, 123, 124, 125).</p>
+<p>At first I tried if the program who begins with <code>}*|*^</code> works;</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
 <p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
 <pre><code>/[1ACFHLRSacdfgik-tx]/Q1
 </code></pre>
@@ -39,7 +97,7 @@
 <pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q1
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(o)grep(&quot;[1ACFHLRSacdfgik-tx]&quot;,o)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3lWI08jXTi1ILNJSiDR2d3Tx8goITk1PS0jOzdUsqYpV08jWhKqvTNJQMlDS5gJQhkEpOLNFQisnThYGYPKCgb2KBRppOao5GcUlRcUFOJlCJgaGRsYmpmbmFpaOTs4urm7uHp5e3j6-ff0BgUHBIaFh4RGRUYlJySmpaekZmVnZObl5-QWFRcUlpWXlFZZWSjpKSpibUCQsWQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
