--- a/q/273996.html
+++ b/q/273996.html
@@ -26,22 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
-<tr d-ix="1"><td>163</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="0"><td>163</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
 <tr d-ix="2"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
 <tr d-ix="3"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 41 bytes</h1>
-<pre><code>&quot;NRTS&quot;4(I0&quot;1ACFHLRSacdfgiklmnopqrstx&quot;F!.@
-</code></pre>
-<p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9X8gsKCVYy0fA0UDJ0dHbz8AkKTkxOSUvPzM7JzcsvKCwqLqlQclPUc/j/v4ILAA" rel="nofollow noreferrer">Try it online!</a></p>
-<p>Uses <code>0</code> as truthy and <code>1</code> as falsy.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.esolangs.org/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.esolangs.org/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
 <pre><code>}*__|*__^__________!!!___!{!___!!!!__!{!__{!{!*!!{!!!{!___________________________{{{{{{{{{___!!!{!!____________________________________!!!!{{!!!_{!!_____{!{{{!{{!
 </code></pre>
 <p>Assumes ASCII input. Reaches to <code>{</code> to output a byte if truthy, no output if falsey.</p>
 <p><a href="https://tpaefawzen.github.io/dis.web/#source=%7D*__%7C*__%5E__________%21%21%21___%21%7B%21___%21%21%21%21__%21%7B%21__%7B%21%7B%21*%21%21%7B%21%21%21%7B%21___________________________%7B%7B%7B%7B%7B%7B%7B%7B%7B___%21%21%21%7B%21%21____________________________________%21%21%21%21%7B%7B%21%21%21_%7B%21%21_____%7B%21%7B%7B%7B%21%7B%7B%21&amp;input_enc=utf-8&amp;input=1&amp;output_enc=base16" rel="nofollow noreferrer">Try on dis.web!</a></p>
+<p><a href="https://youtu.be/ZimZzp6iLVA" rel="nofollow noreferrer">Screencast to verify every test case (YouTube)</a></p>
 <h2>How it works</h2>
 <p>Get a character:</p>
 <pre><code> }
@@ -93,6 +88,12 @@ console.log(program.length);
 <p>I first tried what operation to do could reduce code space.</p>
 <p>For each possible inputs and truthy cases (let them x), I tried x subtracted by command character on Dis (which is one of 33, 42, 62, 94, 95, 123, 124, 125).</p>
 <p>At first I tried if the program who begins with <code>}*|*^</code> works;</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 41 bytes</h1>
+<pre><code>&quot;NRTS&quot;4(I0&quot;1ACFHLRSacdfgiklmnopqrstx&quot;F!.@
+</code></pre>
+<p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9X8gsKCVYy0fA0UDJ0dHbz8AkKTkxOSUvPzM7JzcsvKCwqLqlQclPUc/j/v4ILAA" rel="nofollow noreferrer">Try it online!</a></p>
+<p>Uses <code>0</code> as truthy and <code>1</code> as falsy.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
 <p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
