--- a/q/273996.html
+++ b/q/273996.html
@@ -26,12 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>163</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
-<tr d-ix="2"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
-<tr d-ix="3"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
+<tr d-ix="0"><td>022</td><td>Charcoal</td><td>240708T073213Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274004#274004">Neil</a></td></tr>
+<tr d-ix="1"><td>163</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
+<tr d-ix="3"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
+<tr d-ix="4"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.esolangs.org/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 22 bytes</h1>
+<pre><code>⁼№1ACFHLRSbehjxθ№…β²⁰θ
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMO1sDQxp1jDOb8UyFEydHR28/AJCk5KzciqUNJRKNTUUYBIOVcm56Q6Z@QXaCTpKBgZaILkNDWt///P@a9blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if the input is not a valid POSIX ls option, nothing if it is. Explanation:</p>
+<pre><code> №                      Count of
+               θ        Input character in
+  1ACFHLRSbehjx         Literal string `1ACFHLRSbehjx`
+⁼                       Is equal to
+                №       Count of
+                     θ  Input character in
+                  β     Lowercase alphabet
+                 …      Truncated to length
+                   ²⁰   Literal integer `20`
+                        Implicitly print
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.esolangs.org/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
 <pre><code>}*__|*__^__________!!!___!{!___!!!!__!{!__{!{!*!!{!!!{!___________________________{{{{{{{{{___!!!{!!____________________________________!!!!{{!!!_{!!_____{!{{{!{{!
 </code></pre>
 <p>Assumes ASCII input. Reaches to <code>{</code> to output a byte if truthy, no output if falsey.</p>
@@ -89,13 +106,13 @@ console.log(program.length);
 <p>For each possible inputs and truthy cases (let them x), I tried x subtracted by command character on Dis (which is one of 33, 42, 62, 94, 95, 123, 124, 125).</p>
 <p>At first I tried if the program who begins with <code>}*|*^</code> works;</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 41 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 41 bytes</h1>
 <pre><code>&quot;NRTS&quot;4(I0&quot;1ACFHLRSacdfgiklmnopqrstx&quot;F!.@
 </code></pre>
 <p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9X8gsKCVYy0fA0UDJ0dHbz8AkKTkxOSUvPzM7JzcsvKCwqLqlQclPUc/j/v4ILAA" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Uses <code>0</code> as truthy and <code>1</code> as falsy.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
 <p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
 <pre><code>/[1ACFHLRSacdfgik-tx]/Q1
 </code></pre>
@@ -105,7 +122,7 @@ console.log(program.length);
 <pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q1
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(o)grep(&quot;[1ACFHLRSacdfgik-tx]&quot;,o)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3lWI08jXTi1ILNJSiDR2d3Tx8goITk1PS0jOzdUsqYpV08jWhKqvTNJQMlDS5gJQhkEpOLNFQisnThYGYPKCgb2KBRppOao5GcUlRcUFOJlCJgaGRsYmpmbmFpaOTs4urm7uHp5e3j6-ff0BgUHBIaFh4RGRUYlJySmpaekZmVnZObl5-QWFRcUlpWXlFZZWSjpKSpibUCQsWQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
