--- a/q/273990.html
+++ b/q/273990.html
@@ -26,29 +26,52 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>060</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
-<tr d-ix="1"><td>105</td><td>Python 3</td><td>240708T074215Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274005#274005">Jitse</a></td></tr>
-<tr d-ix="2"><td>009</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
-<tr d-ix="3"><td>036</td><td>R</td><td>240708T054306Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274000#274000">pajonk</a></td></tr>
-<tr d-ix="4"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
-<tr d-ix="5"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
-<tr d-ix="6"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
-<tr d-ix="7"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
+<tr d-ix="0"><td>010</td><td>05AB1E</td><td>240708T075629Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274006#274006">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>060</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="2"><td>105</td><td>Python 3</td><td>240708T074215Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274005#274005">Jitse</a></td></tr>
+<tr d-ix="3"><td>009</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="4"><td>036</td><td>R</td><td>240708T054306Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274000#274000">pajonk</a></td></tr>
+<tr d-ix="5"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
+<tr d-ix="6"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
+<tr d-ix="7"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
+<tr d-ix="8"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>δ*OZ/āDδQQ
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/273995/52210"><em>@alephalpha</em>'s PARI/GP answer</a>, so make sure to upvote that answer as well!</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//3BYt/yj9I40u57YEBv7/Hx2tYKgDQ7E6IJ6uoQ6IgHAgfF2EFEg2Nva/rm5evm5OYlUlAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXL/3NbtPyj9I80upzbEhj4X@d/dHS0gqEODMXqgHi6hjogAsKB8HURUiDZ2FgdBahGmDhECCGjC9UKlIcxkS3AJhcb@19XNy9fNyexqhIA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>δ*O        # Matrix multiplicate the (implicit) input with itself:
+δ          #  Apply double-vectorized, using two times the (implicit) input-matrix:
+ *         #   Vectorized multiply
+  O        #  Sum each inner row together
+   Z       # Push the flattened maximum (without popping the matrix)
+    /      # Divide each inner value by this maximum
+     āDδQ  # Push an identity-matrix of the same size:
+     ā     #  Push a list in the range [1,length] (without popping)
+      D    #  Duplicate it
+       δ   #  Apply double-vectorized again:
+        Q  #   Check whether the values are equal
+         Q # Check if the earlier matrix equals the identity-matrix
+           # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
 <p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some(p=&gt;m.some(q=&gt;p!=q&amp;&amp;p.reduce((t,v,x)=&gt;t+v*q[x],0)))
 </code></pre>
 <p><a href="https://tio.run/##jY7dCsIgGIbPvQo7GVoqdQF6I@LBcC6KOXU62d0bwdZW1Ojgg4/3h@e917mOerj5RHvXmNLyYrmwLDprkH99gQt/4KGqPBtMM2qDUCKZTJiLdMrHICdFzhjjol0fXWdY566oRRJAKOGFwPWgIotIZ5FuxcWgn0k614HCGPzEvJX2wjve9210M27l/Jd9osoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda a,x=2:x&lt;1or all(sum(map(int.__eq__,i,j))*2==len(i)for i in a for j in{*a}-{i})*f([*zip(*a)],x-1)
 </code></pre>
 <p><a href="https://tio.run/##rZDBCoMwEETvfsUesyEpaG/SfIkESanSSNRUI9iK354mKkLvPSQ8ZodlduzbPfvu6n0tjGrvDwWKzSLL51vaD6CMIePUklZZojt3KcvqVZZMswaRZkKYqiMa6@DUoDtQELEJuFC18kWvSGtS0I@2hCqUbOYpeleNbgQBRVJAkUqQbAMGcD4ZvqjwQ@GnAofKfzy772@r@L5KJvGcGDcet8XOEwhsQ3o3WVNtxWzE4hgxjO0QmiJ16Msi@i8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 9 bytes</h1>
 <p><em>Thanks to <a href="https://codegolf.stackexchange.com/users/9288/alephalpha">@alephalpha</a> for a correction</em>.</p>
 <pre><code>t!Y*zUGn=
 </code></pre>
@@ -65,14 +88,14 @@ n    % Number of entries. Gives n^2
 =    % Equal? Implicit display
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 36 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 36 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(H)any(H%*%t(H)-diag(n&lt;-nrow(H))*n)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3VWI0PDQT8yo1PFS1VEuAbN2UzMR0jTwb3byi_HIgX1MrTxOq9muaRkFRZl6JRomGoaamJheMW5SUmZeikaxhqGOoqQOidEHS2OR1CSlQgCKQMhBDF8LXhQtAxXRRVIBV4TIR1QhdhBk4LEFRAQQQzy9YAKEB" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Uses the characterization: <span class="math-container">\$HH^T=nI_n\$</span>.</p>
 <p>Outputs swapped <code>TRUE</code>/<code>FALSE</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
 <pre><code>Sđ∙Z
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FsuDj0x81DEzaklxUnIxVGzBzbboaMPYWC4gqWMYqwMkdWFcXRBfFyQMldZBKNGBSkMYMLYuRAquXwfJEIiMDg7xWIhzAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -98,13 +121,13 @@ S       Find a subset of the input
         Nekomata does not allow multiplying two lists of different lengths
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
 <pre><code>a-&gt;a*a~==#a
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWqxN17RK1EutsbZUTISI3pycWFORUaiQq6NopFBRl5pUAmUogjpJCmkaipqaOQrRvYomGIYhhqGNobaijaxgLZusaWusCRSAcMARL6oBlIBSEpQsRhunSgWsFc6yxiMXGakKct2ABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Let <span class="math-container">\$A\$</span> be the input matrix. Since it is guaranteed to contain only <code>1</code> and <code>-1</code>, we only need to check if <span class="math-container">\$A A^T = n I\$</span>, where <span class="math-container">\$n\$</span> is the number of rows in <span class="math-container">\$A\$</span>. When comparing a matrix with a scalar, PARI/GP will automatically multiply the scalar by the identity matrix of the same size.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
 <pre><code>2ḋṠ₌@ȧṠ⁼
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIy4biL4bmg4oKMQMin4bmg4oG8IiwiIiwiW1sxICwxLCAxLCAxXSxbMSwgLTEsICAxLCAtMSxdLFsxLCAxLCAtMSwgLTFdLFsxLC0xLC0xLCAxXV0iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -116,7 +139,7 @@ S       Find a subset of the input
    ₌ ȧṠ  # Sum of absolute values?
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>⊙θ⊙θ∧⁻κμΣ×ιλ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjetAooy80o0HPMqNQp1FOBUioZvZl5psUa2jkKupo5CcGmuRkhmbmqxRqaOQo4mGFgvKU5KLoaaszxaSbcsRyn2pkN0dLShjgIUxepwKSgA-bpgvi6cD-Yg8XWhSmJjYyHmAQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if not Hadamard, nothing if Hadamard, Explanation:</p>
