--- a/q/273990.html
+++ b/q/273990.html
@@ -26,17 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>060</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
-<tr d-ix="1"><td>010</td><td>05AB1E</td><td>240708T075629Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274006#274006">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>105</td><td>Python 3</td><td>240708T074215Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274005#274005">Jitse</a></td></tr>
-<tr d-ix="3"><td>009</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="0"><td>007</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="1"><td>060</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="2"><td>010</td><td>05AB1E</td><td>240708T075629Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274006#274006">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>105</td><td>Python 3</td><td>240708T074215Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274005#274005">Jitse</a></td></tr>
 <tr d-ix="4"><td>036</td><td>R</td><td>240708T054306Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274000#274000">pajonk</a></td></tr>
 <tr d-ix="5"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
 <tr d-ix="6"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
 <tr d-ix="7"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
 <tr d-ix="8"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 7 bytes</h1>
+<p><em>Thanks to <a href="https://codegolf.stackexchange.com/users/9288/alephalpha">@alephalpha</a> for a correction</em>.</p>
+<pre><code>t!Y*XR~
+</code></pre>
+<p>Inputs a matrix. Outputs a <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy/falsy</a> result (code footer includes test for truthiness/falsihood) for Hadamard/non-Hadamard respectively.</p>
+<p><a href="https://tio.run/##y00syfn/v0QxUisiqO6/vXpJUWlJRqU6V616WmJOcaX6/2gFQwUYsgZRuoYQ0hoqrAvn6MIkYwE" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L9EMVIrIqjuv716SVFpSUalOletelpiTjGQEesSVRHyP1rBUAGGrEGUriGEtIYK68I5ujDJWK5oqHqwCISLpA/GhBiJUw6qMRYA" rel="nofollow noreferrer">verify all test cases</a></p>
+<h3>How it works</h3>
+<pre><code>t    % Implicit input: matrix M, of size n, with 1 or −1 entries. Duplicate
+!    % Transpose
+Y*   % Matrix product. This is a scalar matrix if and only if M is Hadamard
+z    % Number of non-zeros. Gives n if and only if M is Hadamard
+U    % Square 
+G    % Push input again
+n    % Number of entries. Gives n^2
+=    % Equal? Implicit display
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
 <p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some(p=&gt;m.some(q=&gt;p!=q&amp;&amp;p.reduce((t,v,x)=&gt;t+v*q[x],0)))
@@ -59,7 +76,7 @@ m.some(p =&gt;         // for each row p[] in m[]:
 )                   // end of outer some()
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>δ*OZ/āDδQQ
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/273995/52210"><em>@alephalpha</em>'s PARI/GP answer</a>, so make sure to upvote that answer as well!</p>
@@ -81,28 +98,11 @@ m.some(p =&gt;         // for each row p[] in m[]:
            # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda a,x=2:x&lt;1or all(sum(map(int.__eq__,i,j))*2==len(i)for i in a for j in{*a}-{i})*f([*zip(*a)],x-1)
 </code></pre>
 <p><a href="https://tio.run/##rZDBCoMwEETvfsUesyEpaG/SfIkESanSSNRUI9iK354mKkLvPSQ8ZodlduzbPfvu6n0tjGrvDwWKzSLL51vaD6CMIePUklZZojt3KcvqVZZMswaRZkKYqiMa6@DUoDtQELEJuFC18kWvSGtS0I@2hCqUbOYpeleNbgQBRVJAkUqQbAMGcD4ZvqjwQ@GnAofKfzy772@r@L5KJvGcGDcet8XOEwhsQ3o3WVNtxWzE4hgxjO0QmiJ16Msi@i8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 9 bytes</h1>
-<p><em>Thanks to <a href="https://codegolf.stackexchange.com/users/9288/alephalpha">@alephalpha</a> for a correction</em>.</p>
-<pre><code>t!Y*zUGn=
-</code></pre>
-<p>Inputs a matrix. Gives <code>1</code> or <code>0</code> for Hadamard or non-Hadamard, respectively.</p>
-<p><a href="https://tio.run/##y00syfn/v0QxUqsq1D3P9v//aAVDBRiyBlG6hhDSGiqsC@fowiRjAQ" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L9EMVKrKtQ9z/a/S1RFyP9oBUMFGLIGUbqGENIaKqwL5@jCJGO5oqHqwSIQLpI@GBNiJE45qMZYAA" rel="nofollow noreferrer">verify all test cases</a></p>
-<h3>How it works</h3>
-<pre><code>t    % Implicit input: matrix M, of size n, with 1 or −1 entries. Duplicate
-!    % Transpose
-Y*   % Matrix product. This is a scalar matrix if and only if M is Hadamard
-z    % Number of non-zeros. Gives n if and only if M is Hadamard
-U    % Square 
-G    % Push input again
-n    % Number of entries. Gives n^2
-=    % Equal? Implicit display
-</code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 36 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(H)any(H%*%t(H)-diag(n&lt;-nrow(H))*n)
