--- a/q/273990.html
+++ b/q/273990.html
@@ -40,17 +40,14 @@
 <p><em>Thanks to <a href="https://codegolf.stackexchange.com/users/9288/alephalpha">@alephalpha</a> for a correction</em>.</p>
 <pre><code>t!Y*XR~
 </code></pre>
-<p>Inputs a matrix. Outputs a <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy/falsy</a> result (code footer includes test for truthiness/falsihood) for Hadamard/non-Hadamard respectively.</p>
-<p><a href="https://tio.run/##y00syfn/v0QxUisiqO6/vXpJUWlJRqU6V616WmJOcaX6/2gFQwUYsgZRuoYQ0hoqrAvn6MIkYwE" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L9EMVIrIqjuv716SVFpSUalOletelpiTjGQEesSVRHyP1rBUAGGrEGUriGEtIYK68I5ujDJWK5oqHqwCISLpA/GhBiJUw6qMRYA" rel="nofollow noreferrer">verify all test cases</a></p>
+<p>Inputs a matrix. Outputs a a matrix of ones (which is <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy</a>) if the input is a Hadamard matrix, or a matrix containing at least a zero (which is <a href="https://codegolf.stackexchange.com/a/95057/36398">falsy</a>) otherwise.</p>
+<p><a href="https://tio.run/##y00syfn/v0QxUisiqO6/vXpJUWlJRqU6V616WmJOcaX6/2gFQwUYsgZRuoYQ0hoqrAvn6MIkYwE" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L9EMVIrIqjuv716SVFpSUalOletelpiTjGQEesSVRHyP1rBUAGGrEGUriGEtIYK68I5ujDJWK5oqHqwCISLpA/GhBiJUw6qMRYA" rel="nofollow noreferrer">verify all test cases</a>.</p>
 <h3>How it works</h3>
-<pre><code>t    % Implicit input: matrix M, of size n, with 1 or −1 entries. Duplicate
-!    % Transpose
-Y*   % Matrix product. This is a scalar matrix if and only if M is Hadamard
-z    % Number of non-zeros. Gives n if and only if M is Hadamard
-U    % Square 
-G    % Push input again
-n    % Number of entries. Gives n^2
-=    % Equal? Implicit display
+<pre><code>t     % Implicit input: matrix M, of size n, with 1 or −1 entries. Duplicate
+!     % Transpose
+Y*    % Matrix product. This is a scalar matrix if and only if M is Hadamard
+XR    % Set entries on the diagonal and below to 0
+~     % Negate each entry. Implicit display
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
